# SenseVoiceOnnx

./: CMakeLists.txt  README.md  asr.cpp  batch_sense_voice.cpp  batch_sense_voice.h  build.sh  clog.cpp  config.h  onnx_engine.cpp  onnx_engine.h  pad-sequence.cc  sense_voice.cpp  sense_voice.h  util.cpp  util.h  ws_server.cpp  ws_server.h
main/: infer.cc  server.cc
scripts/: multi_run.sh  offline-websocket-client-decode-files-sequential.py
